--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!doctype html>
+<html>
+     <head>
+          <meta charset="UTF-8" />
+     </head>
+     <body>
+     poproszę piąteczkę <3
+  </body>
+</html>
+1
+2
+3
+4
+5
+6
+7
+8
+<!doctype html>
+<html>
+     <head>
+          <meta charset="UTF-8" />
+     </head>
+     <body>
+     </body>
+</html>
