--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
-<title>Prosty tekst po polsku</title>
-<body bgcolor="#ffffff" vlink="#000000" link="#000000" hlink="#000000"
-alink="#000000"> <font size="+3">
+
+<title><center>Prosty tekst po polsku</title>
+<body bgcolor="black"> <font size="+6"><center>
 
 <font color="red">
 <pre>
