--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <font color="red">
 <pre>
------------ Łukasz Tybuszewski s40618 ----------------</br></br> Poproszę piąteczkę :3
+----------- Lukasz Tybuszewski s40618 ----------------</br></br> Poprosze piateczke :3</br></br>
+ <img src="http://pl.memgenerator.pl/mem-image/piatka-to-moja-codziennosc-pl-ffffff/d">
 </pre>
 </html>
