--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <font color="red">
 <pre>
 ----------- Lukasz Tybuszewski s40618 ----------------</br></br> Poprosze piateczke :3</br></br>
+ <!-- WIDZĘ CIĘ ! -->
  <img src="http://pl.memgenerator.pl/mem-image/piatka-to-moja-codziennosc-pl-ffffff/d">
 </pre>
 </html>
