--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 
-<title><center>FajnaStrona^^</title>
+<title>#LATWO</title>
 <body bgcolor="black"> <font size="+6"><center>
 
 <font color="red">
